第二次提交

--- a/yougoushishang/index.scss
+++ b/yougoushishang/index.scss
@@ -133,8 +133,10 @@
 	 	.nav .nav-2 .nav2-1 .div1 ul li{
 			width:60px;
 			height:15px;
-			font-size:14px;
 		 	padding:10px;
+		}
+		.nav .nav-2 .nav2-1 .div1 ul li a{
+			font-size:14px;
 		}
 	 	.nav .nav-2 .nav2-1  .div1 ul li:nth-child(1){
 			padding-top:25px;
@@ -178,8 +180,11 @@
 	 	.nav .nav-2 .nav2-1 .div2 ul li{
 			width:60px;
 			height:15px;
-			font-size:14px;
+			
 			padding:10px;
+		}
+		.nav .nav-2 .nav2-1 .div2 ul li a{
+			font-size:14px;
 		}
 		.nav .nav-2 .nav2-1  .div2 ul li:nth-child(1){
 			padding-top:25px;
@@ -222,8 +227,11 @@
 	 	.nav .nav-2 .nav2-1 .div3 ul li{
 			width:60px;
 			height:15px;
-			font-size:14px;
+			
 		 	padding:10px;
+		}
+		.nav .nav-2 .nav2-1 .div3 ul li a{
+			font-size:14px;
 		}
 	 	.nav .nav-2 .nav2-1  .div3 ul li:nth-child(1){
 			padding-top:25px;
@@ -266,8 +274,11 @@
 	 	.nav .nav-2 .nav2-1 .div4 ul li{
 		width:60px;
 		height:15px;
-		font-size:14px;
+		
 		 padding:10px;
+		}
+		.nav .nav-2 .nav2-1 .div4 ul li a{
+			font-size:14px;	
 		}
 	 	.nav .nav-2 .nav2-1  .div4 ul li:nth-child(1){
 		padding-top:25px;
@@ -310,9 +321,13 @@
 	 	.nav .nav-2 .nav2-1 .div5 ul li{
 		width:60px;
 		height:15px;
-		font-size:14px;
+		
 		 padding:10px;
 		}
+		.nav .nav-2 .nav2-1 .div5 ul li a{
+			font-size:14px;	
+		}
+
 	 	.nav .nav-2 .nav2-1  .div5 ul li:nth-child(1){
 		padding-top:25px;
 		}
@@ -402,7 +417,7 @@
 	// 新品推荐——标题部分
 	.NEW .NEW-1{
 		width:1326px;
-		height:176px;
+		height:200px;
 		background:yellow;
 		// padding-left:576px;
 		// padding-top:80px;
@@ -436,7 +451,7 @@
 	//新品推荐 
 	.NEW .NEW-2{
 		width:1326px;
-		height:536px;
+		height:512px;
 		// background:pink;
 		background:#ffffff;
 	}
@@ -452,30 +467,33 @@
 	.NEW .NEW-2 .div1{
 		float:left;
 		width:1100px;
-		height:536px;
+		height:512px;
 		// background:red;	
 		// overflow:hidden;
 	}
 	// 图片1 div1-1
 	.NEW .NEW-2 .div1 .div1-1{
 		float:left;
-		 width:159px;
-		height:412px;
+		 width:230px;
+		height:437px;
 		// background:green;
-		 margin-left:120px;
-		padding-top:125px;
+		 margin-left:90px;
+		// padding-top:125px;
 	}
 	.NEW .NEW-2 .div1 .div1-1 #img1{
-		width:159px;
-		height:154px;
+		width:210px;
+		height:200px;
+		padding-left:10px;
+		margin-top:100px;
+
 	}
 
 	.NEW .NEW-2 .div1 .div1-1 dl{
 		width:100px;
-		height:190px;
+		height:140px;
 		// background:blue;
 		padding-left:58px;
-		padding-top:66px;
+		padding-top:50px;
 	}
 	.NEW .NEW-2 .div1 .div1-1 dl #img2{
 		width:48px;
@@ -495,23 +513,25 @@
 	// 图片2 div1-2
 	.NEW .NEW-2 .div1 .div1-2{
 		float:left;
-		width:162px;
-		height:412px;
+		width:230px;
+		height:437px;
 		/* background:yellow; */
-		 margin-left:100px;
-		padding-top:125px;
+		 margin-left:20px;
+		// padding-top:125px;
 	}
 	.NEW .NEW-2 .div1 .div1-2 #img1{
-		width:162px;
-		height:154px;
+		width:210px;
+		height:200px;
+		margin-top:100px;
+		padding-left:10px;
 	}
 
 	.NEW .NEW-2 .div1 .div1-2 dl{
 		width:100px;
-		height:190px;
+		height:140px;
 		// background:blue;
 		padding-left:58px;
-		padding-top:66px;
+		padding-top:50px;
 	}
 	.NEW .NEW-2 .div1 .div1-2 dl #img2{
 		width:48px;
@@ -532,23 +552,31 @@
 	// 图片3 div1-3
 	.NEW .NEW-2 .div1 .div1-3{
 		float:left;
-		width:154px;
-		height:412px;
+		width:230px;
+		height:437px;
 		// background:yellow;
-		margin-left:90px;
-		padding-top:125px;
+		 margin-left:20px;
+		// padding-top:125px;
+		// border:1px solid black;
 	}
+	// .NEW .NEW-2 .div1 .div1-3 p{
+	// 	width:148px;
+	// 	height:220px;
+	// }
 	.NEW .NEW-2 .div1 .div1-3 #img1{
-		width:154px;
-		height:170px;
+		width:210px;
+		height:180px;
+		padding-left:10px;
+		margin-top:100px;
+		// border:1px solid black;
 	}
 
 	.NEW .NEW-2 .div1 .div1-3 dl{
 		width:100px;
-		height:190px;
+		height:140px;
 		// background:blue;
 		padding-left:58px;
-		padding-top:66px;
+		padding-top:50px;
 	}
 	.NEW .NEW-2 .div1 .div1-3 dl #img2{
 		width:48px;
@@ -568,23 +596,25 @@
 	// 图4 div1-4
 	.NEW .NEW-2 .div1 .div1-4{
 		float:left;
-		width:130px;
-		height:412px;
+		width:220px;
+		height:437px;
 		// background:yellow;
-		margin-left:110px;
-		padding-top:125px;
+		 margin-left:20px;
+		// padding-top:125px;
 	}
 	.NEW .NEW-2 .div1 .div1-4 #img1{
-		width:130px;
-		height:170px;
+		width:210px;
+		height:200px;
+		 padding-left:4px;
+		margin-top:100px;
 	}
 
 	.NEW .NEW-2 .div1 .div1-4 dl{
 		width:100px;
-		height:190px;
+		height:140px;
 		// background:blue;
 		padding-left:58px;
-		padding-top:66px;
+		padding-top:50px;
 	}
 	.NEW .NEW-2 .div1 .div1-4 dl #img2{
 		width:48px;
@@ -625,7 +655,7 @@
 		// padding-top:80px;
 	}
 	.zhutui .zhutui-1 h2{
-		font-size:42px;
+		font-size:40px;
 		color:#333333;
 		font-weight:900px;
 		text-align:center;
@@ -651,7 +681,7 @@
 // 主推大牌——图片展示部分 
 	.zhutui .zhutui-2{
 		width:990px;
-		height:421px;
+		height:610px;
 		// background:red;
 		padding:0px 168px 0px 168px;
 	}
@@ -659,16 +689,51 @@
 	.zhutui .zhutui-2 .zhutui-top{
 		width:991px;
 		height:506px;
+		
+		
+	}
+	.zhutui .zhutui-2 .zhutui-top ul{
+		// float:left;
+
 	}
 	.zhutui .zhutui-2 .zhutui-top ul li{
 		float:left;
+		// width:;
+		// height:
+		// z-index:1;
 	}
+	// .zhutui .zhutui-2 .zhutui-top ul li:nth-child(1){
+	// 	width:310px;
+	// 	height:403px;
+	// 	background:yellow;
+	// }
 	.zhutui .zhutui-2 .zhutui-top ul li img{
 		width:310px;
 	 	height:403px;
 	 	margin-right:20px;
-	 	margin-top:104px;
+	 	 margin-top:104px;
+	 	// display:none;
+	 	
 	}
+	// 图片隐藏部分
+	/*.zhutui .zhutui-2  ol{
+		// float:left;
+	}
+	.zhutui .zhutui-2  ol li{
+		float:left;
+		// left:-160px;
+		// z-index:2;
+	}
+	.zhutui .zhutui-2  ol li:nth-child(1){
+		 // padding-left:150px;
+	}
+	.zhutui .zhutui-2  ol li img{
+		width:64px;
+	 	height:26px;
+	 	// margin-top:250px;
+	 	 // padding-right:210px;
+	 	
+	}*/
 	// 品牌名滚动部分bottom
 	.zhutui .zhutui-2 .zhutui-bottom{
 		width:991px;
