--- a/yougoushishang/list.scss
+++ b/yougoushishang/list.scss
@@ -51,17 +51,17 @@
 		color:#ffffff;
 		font-size:12px;
 	}
-
-// 内容
+	// 内容
 	.content{
-		height:4314px;
+		height:919px;
 		width:1326px;
-		// background:pink;
+		 // background:pink;
 	}
 // 导航条部分
 		.nav{
 			height:222px;
 			width:1326px;
+			 border-bottom:1px solid #eeeeee;
 		// background:blue;		
 		}
 		.nav .nav-1{
@@ -78,17 +78,20 @@
 		.nav .nav-2{
 			height:110px;
 			width:1326px;
+			
 			// background:yellow;
 		}
 		.nav .nav-2 .nav2-1{
 		 	float:left;
 			 width:950px;
 			 height:110px;
+
 		}
 		.nav .nav-2 .nav2-1 ul{
 			width:1150px;
 			height:110px;
 		}
+
 		.nav .nav-2 .nav2-1 ul li{
 			float:left;
 			padding-right:70px;
@@ -365,507 +368,233 @@
 		 padding-top:-20px;
 		 // padding-left:5px;
 		}
-// 轮播图 广告窗
-	 .banner{
-	 	width:100%;
-		height:552px;
-		// width:1326px;
-		// background:red;
-		overflow:hidden;
-		position:relative;
-		 z-index:1;
-	}
-
-	 .banner ol{
-		position:absolute;
-		right:120px;
-		bottom:5px;
-		z-index:2;
-	}
-	 .banner ol li{
-		float:left;
-		margin-right:3px;
-		display:inline;
-		cursor:pointer;
-		background:#231b11;
-		// border:1px solid #f47500;
-		padding:2px 6px;
-		// font-family:arial;
-		height:4px;
-		width:20px;
-	}
-	 .banner .active{
-		// padding:3px 6px;
-		background: #a39081;
-		position: relative; 
-		// bottom: 1px; 
-	}
-	 .banner ul{
-		width:7956px;
-		position:absolute;
-		// top:0;
-		// left:0;
-		z-index:1;
-	}
-	 .banner ul li{
-		width:1326px;
-		height:552px;
-		float:left;
-	}
-	 .banner ul img{
-		// float:left;
-		 width:1326px;
-		height:552px;
-	}
-// 内容1 新品推荐
-	.NEW{
-		width:1326px;
-		height:712px;
-		// background:blue;
-	}
-	// 新品推荐——标题部分
-	.NEW .NEW-1{
-		width:1326px;
-		height:200px;
-		background:yellow;
-		// padding-left:576px;
-		// padding-top:80px;
-	}
-	.NEW .NEW-1 h2{
-		font-size:42px;
-		color:#333333;
-		font-weight:900px;
-		text-align:center;
-		height:45px;
-		padding-top:72px;
-	}
-	.NEW .NEW-1 ul li{
-		float:left;
-		text-align:center;
-		padding-right:26px;
-		padding-top:36px;
 		
-	}
-	.NEW .NEW-1 ul li a{
-		font-size:16px;
-		color:#333333;
-	}
-	.NEW .NEW-1 ul .li1{	
-		padding-left:612px;
-	}
-	.NEW .NEW-1 ul .li1 a{
-		border-bottom:1px solid #333333;
-	}
-
-	//新品推荐 
-	.NEW .NEW-2{
+// 正文部分
+	.content-main{
 		width:1326px;
-		height:512px;
-		// background:pink;
-		background:#ffffff;
+		height:701px;
+		// background:yellow;
 	}
-	//左侧箭头
-	.NEW .NEW-2 p{
-		float:left;
-		width:12px;
-		height:22px;
-		margin-left:68px;
-		padding-top:210px;
-	}
-	// ——图片展示部分
-	.NEW .NEW-2 .div1{
-		float:left;
-		width:1100px;
-		height:512px;
-		// background:red;	
+	#menu {
+		width:1326px;
+		height:168px;
 		// overflow:hidden;
-	}
-	// 图片1 div1-1
-	.NEW .NEW-2 .div1 .div1-1{
-		float:left;
-		 width:230px;
-		height:437px;
-		// background:green;
-		 margin-left:90px;
-		// padding-top:125px;
-	}
-	.NEW .NEW-2 .div1 .div1-1 #img1{
-		width:210px;
-		height:200px;
-		padding-left:10px;
-		margin-top:100px;
+ 		// padding: 0 34px;
+ 		// margin-top:34px;
+ 	  }
 
-	}
+	#menu .m-t {
+  		height:73px;
+  		width:1258px;
+  		padding-left:68px;
+  		padding-top:34px;
 
-	.NEW .NEW-2 .div1 .div1-1 dl{
-		width:100px;
-		height:140px;
-		// background:blue;
-		padding-left:58px;
-		padding-top:50px;
-	}
-	.NEW .NEW-2 .div1 .div1-1 dl #img2{
-		width:48px;
-		height:14px;
-	}
-	.NEW .NEW-2 .div1 .div1-1 dl dt a{
-		display:block;
-		font-size:12px;
-		color:#666666;
-		padding-top:10px;
-	}
-	.NEW .NEW-2 .div1 .div1-1 dl dd{
-		font-size:12px;
-		color:#333333;
-		padding-top:12px;
-	}
-	// 图片2 div1-2
-	.NEW .NEW-2 .div1 .div1-2{
-		float:left;
-		width:230px;
-		height:437px;
-		/* background:yellow; */
-		 margin-left:20px;
-		// padding-top:125px;
-	}
-	.NEW .NEW-2 .div1 .div1-2 #img1{
-		width:210px;
-		height:200px;
-		margin-top:100px;
-		padding-left:10px;
-	}
+  		// font: 600 16px/80px '';	
+  	}
 
-	.NEW .NEW-2 .div1 .div1-2 dl{
-		width:100px;
-		height:140px;
-		// background:blue;
-		padding-left:58px;
-		padding-top:50px;
-	}
-	.NEW .NEW-2 .div1 .div1-2 dl #img2{
-		width:48px;
-		height:14px;
-	}
-	.NEW .NEW-2 .div1 .div1-2 dl dt a{
-		display:block;
-		font-size:12px;
-		color:#666666;
-		padding-top:10px;
-	}
-	.NEW .NEW-2 .div1 .div1-2 dl dd{
-		font-size:12px;
-		color:#333333;
-		padding-top:12px;
-	}
+	#menu .m-t a {
+  		color: #000; 
+  		font-size:12px;
+  		font-weight:900px;
+  	}
 
-	// 图片3 div1-3
-	.NEW .NEW-2 .div1 .div1-3{
-		float:left;
-		width:230px;
-		height:437px;
-		// background:yellow;
-		 margin-left:20px;
-		// padding-top:125px;
-		// border:1px solid black;
-	}
-	// .NEW .NEW-2 .div1 .div1-3 p{
-	// 	width:148px;
-	// 	height:220px;
-	// }
-	.NEW .NEW-2 .div1 .div1-3 #img1{
-		width:210px;
-		height:180px;
-		padding-left:10px;
-		margin-top:100px;
-		// border:1px solid black;
-	}
+	#menu .m-b {
+ 		height: 62px;
 
-	.NEW .NEW-2 .div1 .div1-3 dl{
-		width:100px;
-		height:140px;
-		// background:blue;
-		padding-left:58px;
-		padding-top:50px;
-	}
-	.NEW .NEW-2 .div1 .div1-3 dl #img2{
-		width:48px;
-		height:14px;
-	}
-	.NEW .NEW-2 .div1 .div1-3 dl dt a{
-		display:block;
-		font-size:12px;
-		color:#666666;
-		padding-top:10px;
-	}
-	.NEW .NEW-2 .div1 .div1-3 dl dd{
-		font-size:12px;
-		color:#333333;
-		padding-top:12px;
-	}
-	// 图4 div1-4
-	.NEW .NEW-2 .div1 .div1-4{
-		float:left;
-		width:220px;
-		height:437px;
-		// background:yellow;
-		 margin-left:20px;
-		// padding-top:125px;
-	}
-	.NEW .NEW-2 .div1 .div1-4 #img1{
-		width:210px;
-		height:200px;
-		 padding-left:4px;
-		margin-top:100px;
-	}
+ 	}
 
-	.NEW .NEW-2 .div1 .div1-4 dl{
-		width:100px;
-		height:140px;
-		// background:blue;
-		padding-left:58px;
-		padding-top:50px;
-	}
-	.NEW .NEW-2 .div1 .div1-4 dl #img2{
-		width:48px;
-		height:14px;
-	}
-	.NEW .NEW-2 .div1 .div1-4 dl dt a{
-		display:block;
-		font-size:12px;
-		color:#666666;
-		padding-top:10px;
-	}
-	.NEW .NEW-2 .div1 .div1-4 dl dd{
-		font-size:12px;
-		color:#333333;
-		padding-top:12px;
-	}
+	#menu .m-b h3 {
+  		float: left;
+  		width: 211px;
+  		height:23px;
+  		font-size:12px;
+  		padding-left:68px;
+  		padding-top:11px;
+  	 }
 
-	// 右侧箭头
-	.NEW .NEW-2 b{
-		float:left;
-		width:12px;
-		height:22px;
-		// margin-left:1100px;
-		padding-top:210px;
-	}
-// 内容2 今日主推大牌
-	.zhutui{
+	#menu .m-b p {
+  		float: left;
+ 		width: 1046px;
+  		height: 58px;
+  		border-bottom: 1px solid #e2e2e2;
+  		font: 600 14px/50px ''; 
+  	}
+
+	#menu .m-b p a {
+  		color: #000;
+ 		margin: 0 30px;
+ 		text-align:center;
+
+ 	}
+
+	#menu .m-b p span {
+  		color: #999;
+  		margin-left:480px; 
+  	}
+
+	#main {
 		width:1326px;
-		height:853px;
-		background:orange;
-	}
-// 主推大牌——标题部分
-	.zhutui .zhutui-1{
+		height:380px;
+  		// padding: 0 36px;
+  		overflow: hidden;
+ 		// margin-bottom: 60px; 
+ 		}
+
+	#main .m-l {
+		width:202px;
+		height:380px;
+		padding-left:68px;
+ 		float: left;
+  		 }
+
+	#main .m-l h5 {
+ 		 font-size: 14px; 
+ 		 font-weight:700;
+ 		 padding:8px 0;
+
+ 	}
+
+	#main .m-l h5 img{
+	 	// width:8px;
+	 	// height:10px;
+	 	float:left;
+	 	// margin-bottom:20px;
+	 }
+	 // #main .m-l h5 p{
+	 // 	float:left;
+	 // }
+	#main .goods_box {
+  		float: left;
+  		width: 1050px; }
+
+	#main .goods_box ul {
+  		overflow: hidden; }
+
+	#main .goods_box ul li {
+  		float: left;
+  		width: 230px;
+  		height: 360px;
+  		text-align: center; 
+  		margin-top:20px;
+  	}
+
+	#main .goods_box ul li:hover {
+  		background: #f8f8f8; }
+
+	#main .goods_box ul li a {
+ 		overflow: hidden;
+ 	 }
+
+	#main .goods_box ul li a img {
+  		width: 210px;
+  		height:220px;
+  		margin-top: 10px;
+  		margin-left:10px;
+  		 }
+
+	#main .goods_box ul li a h3 {
+  		width: 210px;
+  		height: 20px;
+  		background: #696868;
+  		font-size:12px;
+  		color: #fff;
+  		display: none;
+ 		text-align:left;
+ 		margin-left:10px;
+ 	}
+
+	#main .goods_box ul li:hover a h3 {
+  		display: block; }
+
+	#main .goods_box ul li a p {
+  		font: 12px/20px '';
+  		color: #000; 
+  		text-align:center;
+  		margin-top:20px;
+  		height:50px;
+  	}
+
+	#main .goods_box ul li span {
+  
+  		font: 600 15px '';
+  		color: #333333; 
+  		
+  		
+  	}
+
+	#main .goods_box ul li i {
+  		font: 15px '';
+  		color: #999;
+  		text-decoration: line-through;
+  		
+  		 }
+
+	// #main .goods_box ul li button {
+ //  		display: block;
+ //  		margin: 0 auto;
+ //  		border: 0;
+ //  		background: #000;
+ //  		color: #fff; }
+
+	#newpage{
+		height:153px;
 		width:1326px;
-		height:97px;
-		 // background:yellow;
-		// padding-left:576px;
-		// padding-top:80px;
+		// background:yellow;
 	}
-	.zhutui .zhutui-1 h2{
-		font-size:40px;
-		color:#333333;
-		font-weight:900px;
-		text-align:center;
-		height:40px;
-	}
-	.zhutui .zhutui-1 ul li{
-		float:left;
-		text-align:center;
-		padding-right:26px;
-		padding-top:36px;
-		
-	}
-	.zhutui .zhutui-1 ul li a{
-		font-size:16px;
-		color:#333333;
-	}
-	.zhutui .zhutui-1 ul .li1{	
-		padding-left:612px;
-	}
-	.zhutui .zhutui-1 ul .li1 a{
-		border-bottom:1px solid #333333;
-	}
-// 主推大牌——图片展示部分 
-	.zhutui .zhutui-2{
-		width:990px;
-		height:610px;
+	#newpage  #newpage-1{
+		height:150px;
+		width:70px;
 		// background:red;
-		padding:0px 168px 0px 168px;
+		margin-left:1100px;
 	}
-	// 图片展示部分top 
-	.zhutui .zhutui-2 .zhutui-top{
-		width:991px;
-		height:506px;
-		
-		
-	}
-	.zhutui .zhutui-2 .zhutui-top ul{
-		// float:left;
-
-	}
-	.zhutui .zhutui-2 .zhutui-top ul li{
-		float:left;
-		// width:;
-		// height:
-		// z-index:1;
-	}
-	// .zhutui .zhutui-2 .zhutui-top ul li:nth-child(1){
-	// 	width:310px;
-	// 	height:403px;
-	// 	background:yellow;
-	// }
-	.zhutui .zhutui-2 .zhutui-top ul li img{
-		width:310px;
-	 	height:403px;
-	 	margin-right:20px;
-	 	 margin-top:104px;
-	 	// display:none;
-	 	
-	}
-	// 图片隐藏部分
-	/*.zhutui .zhutui-2  ol{
-		// float:left;
-	}
-	.zhutui .zhutui-2  ol li{
-		float:left;
-		// left:-160px;
-		// z-index:2;
-	}
-	.zhutui .zhutui-2  ol li:nth-child(1){
-		 // padding-left:150px;
-	}
-	.zhutui .zhutui-2  ol li img{
-		width:64px;
-	 	height:26px;
-	 	// margin-top:250px;
-	 	 // padding-right:210px;
-	 	
-	}*/
-	// 品牌名滚动部分bottom
-	.zhutui .zhutui-2 .zhutui-bottom{
-		width:991px;
-		height:108px;
-		padding-top:73px;
-	}
-	.zhutui .zhutui-2 .zhutui-bottom p{
-		float:left;
-		width:12px;
-		height:21px;
-		padding-right:26px;
-
-	}
-	.zhutui .zhutui-2 .zhutui-bottom p img{
-		float:left;
-		width:12px;
-		height:21px;
-
-	}
-	.zhutui .zhutui-2 .zhutui-bottom b{
-		float:left;
-		width:12px;
-		height:21px;
-	}
-	.zhutui .zhutui-2 .zhutui-bottom a img{
-		float:left;
-		width:64px;
-		height:26px;
-		padding-right:29px;
-	}
-// 内容3 品牌潮流资讯
-	.pinpai{
-		width:1326px;
-		height:1976px;
-	}
-	// 标题部分
-	.pinpai .pinpai-1{
-		width:1326px;
-		height:124px;
-		 // background:yellow;
-		// padding-left:576px;
-		// padding-top:80px;
-	}
-	.pinpai .pinpai-1 h2{
-		font-size:42px;
-		color:#333333;
-		font-weight:900px;
+	#newpage  #newpage-1 a{
+		display:block;
+		margin-top:50px;
 		text-align:center;
-		height:40px;
+		font-size:14px;
 	}
-	.pinpai .pinpai-1 p{
-		font-size:20px;
-		color:#333333;
-		text-align:center;
-		margin-top:17px;
-	}
-	// 图片1
-	.pinpai .pinpai-2{
-		width:1326px;
-		height:504px;
-	}
-	.pinpai .pinpai-2 ul{
-		width:991px;
-		height:458px;
-		padding-left:168px;
-	}
-	.pinpai .pinpai-2 ul li{
+	#newpage  #newpage-1 #a1{
 		float:left;
-	}
-	.pinpai .pinpai-2 ul li img{
-		width:317px;
-		height:459px;
-		padding-right:10px;
+		width:25px;
+		height:25px;
+		background:#333333;
+		color:white;
+		border:1px solid black;
 
 	}
-// 图片2
-	.pinpai .pinpai-3{
-		height:362px;
-		width:1326px;
+	#newpage  #newpage-1 .p1{
+		// width:30px;
+		// height:30px;
+		// background:#333333;
 	}
-	.pinpai .pinpai-3 ul{
-		width:991px;
-		height:253px;
-		padding-left:168px;
-	}
-	.pinpai .pinpai-3 ul li{
+	#newpage  #newpage-1 #a2{
 		float:left;
+		width:25px;
+		height:25px;
+		
+		padding-left:10px;
 	}
-	.pinpai .pinpai-3 ul li img{
-		width:232px;
-		height:248px;
-		padding-right:15px;
 
-	}
-// 图片3
-	.pinpai .pinpai-4{
-		height:456px;
-		width:1326px;
-	}
-	.pinpai .pinpai-4 p{
-		width:990px;
-		height:440px;
-		padding-left:168px;
-	}
-	.pinpai .pinpai-4 p img{
-		width:990px;
-		height:440px;
-	}
-// 图片4
-	.pinpai .pinpai-5{
-		height:534px;
-		width:1326px;
-	}
-	.pinpai .pinpai-5 p{
-		width:990px;
-		height:425px;
-		padding-left:168px;
 
-	}
-	.pinpai .pinpai-5 p img{
-		width:990px;
-		height:440px;
-	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 // 底部
 	.foot{
 		height:593px;
