--- a/yougoushishang/shopping.scss
+++ b/yougoushishang/shopping.scss
@@ -48,15 +48,487 @@
    		 margin-top: 15px;
    		 width: 990px;
     	margin-left: auto;
-   		 margin-right: auto;
-   		 background:pink;
+   		margin-right: auto;
+   		 // background:pink;
 	}
-	.cart_header .log{
+	.cart_header .logo{
 		width: 355px;
    		height: 50px;
    		float:left;
-   		background:url(images/logo333.jpg) no-repeat left top;
+   		background:url(../images/logo333.jpg) no-repeat left top;
 	}
-	.cart_header .log img{
+	.cart_header .logo img{
 	    vertical-align: middle;	
+	}
+	.cart_step{
+		width: 600px;
+    	height: 20px;
+    	line-height: 20px;
+    	background: #e8e8e8;
+    	overflow: hidden;
+    	position: relative;
+    	float: right;
+    	margin-top:20px;
+
+	}
+	
+	.cart_step ul .current{
+		color: #fff;
+   		background: #333;
+   		z-index: 1;
+	}
+	.cart_step ul li {
+   		float: left;
+    	width: 200px;
+    	position: relative;
+    	text-align: center;
+    	z-index:2;
+	}
+	.cart_step li em {
+    	right: -12px;
+    	top: -2px;
+    	border: 12px dashed transparent;
+    	border-left: 12px solid #fff;
+    	border-right: 0;
+    	width: 0;
+    	height: 0;
+   	 	line-height: 0;
+    	position: absolute;
+    }
+    .cart_step li.current i {
+    	border-color: transparent transparent transparent #333;
+	}
+    .cart_step li i {
+    	right: -9px;
+    	top: 0;
+    	border: 10px dashed transparent;
+   		border-left: 10px solid #e8e8e8;
+   		border-right: 0;
+   		width: 0;
+    	height: 0;
+    	line-height: 0;
+    	position: absolute;
+    	font-style: normal;	
+   	}
+// 内容部分
+	.shoppingCartContainerCNY{
+
+	}
+// 1.商品信息部分
+	.cart_gray_box {
+    	padding: 0;
+    	width: 988px;
+    	padding-bottom: 10px;
+    	border: 3px solid #eee;
+        border-bottom: 0;
+    	border-width: 1px 1px 0;
+    	margin-left: auto;
+    	margin-right: auto;
+    	margin-top: 20px;
+	}
+		// 111表格
+	.cart_list_tb {
+   		width: 988px;
+   		border-collapse: collapse;
+   		border-spacing: 0;
+   		border-color: grey;
+	}
+	colgroup {
+    	display: table-column-group;
+	}
+	col {
+    	display: table-column;
+	}
+// 表头
+	thead {
+    	display: table-header-group;
+    	vertical-align: middle;
+    	border-color: inherit;
+	}
+	// 行
+	tr {
+    	display: table-row;
+    	vertical-align: inherit;
+    	border-color: inherit;
+	}
+	// 列
+	.cart_list_tb th {
+   		height: 42px;
+   		border-bottom: 1px solid #eee;
+   		color: #aaa;
+    	font: normal 12px/25px '';
+    	text-align: center;
+	}
+	// 第一列labl
+	.ygChkbox {
+    	overflow: hidden;
+    	position: relative;
+    	vertical-align: middle;
+	}
+	// input
+	.ygChkbox .none {
+    	position: absolute;
+    	left: -9999999px;
+    	display: block;
+    	vertical-align: middle;
+	}
+	// i
+	.ygChkbox .skin.checked {
+    	background-position: -34px -197px;
+    	width: 0;
+    	display: block;
+    	background: url(../images/5555.png) -17px -197px no-repeat;
+   	 	height: 15px;
+    	padding: 0 0 0 15px;
+    	cursor: pointer;
+    	float: left;
+    	margin-left: 20px;
+    	margin-top: 5px;
+	}
+	/* 第二列 */
+	.pr25 {
+    	padding-right: 25px;
+	}
+// 表格内容
+	tbody {
+    	display: table-row-group;
+    	vertical-align: middle;
+   		border-color: inherit;
+	}
+	.cart_list_tb td {
+   		 text-align: center;
+	}
+	.shopping_cart_tr {
+    	border-bottom: 1px dotted #eee;
+    	padding:0;
+    	 background: #fff;
+    	
+	}
+	// 上边空白
+	.shpcrt_blank10 {
+    	height: 15px;
+    	overflow: hidden;
+	}
+	// 中间内容
+	.shopping_cart_tr dl {
+    	padding: 0 0 0 5px;
+	}
+	.rel {
+    	position: relative;
+    	z-index: 99;
+	}
+	.fl{
+		float:left;
+	}
+	// 第一列
+	.col_chkbox {
+   		padding-left: 8px;
+   		padding-top: 29px;
+   		width: 20px;
+   		text-align: left;
+   		float:left;
+    
+	}
+	// label标签
+	.ygChkbox {
+    	overflow: hidden;
+    	position: relative;
+    	vertical-align: middle;
+
+	}
+	// i标签
+	.ygChkbox .skin.checked {
+    	    width: 0;
+    		display: block;
+    		background: url(../images/6666.png) no-repeat -34px -197px;
+    		height: 15px;
+    		padding: 0 0 0 15px;
+    		cursor: pointer;
+    		font-style: normal;
+    		float:left;
+				
+	}
+	// 第二列
+	.cart_list_tb .col_1 {
+    	width: 80px;
+	}
+	.shopping_cart_tr .col_1 a {
+    	border: 1px solid #e6e6e6;
+    	padding: 5px;
+   	 	background: #fff;
+   	 	display: inline-block;
+    	position: relative;
+    	color: #666;
+	}
+	.thumImg {
+    	border: 0;
+    	width: 60px;
+   		height: 60px;
+	}
+	// 第三列
+	.cart_list_tb .col_2 {
+    	width: 250px;
+    	padding: 18px 52px 0 20px;
+    	text-align: left;
+	}
+	.shopping_cart_tr .col_2 a div {
+   	 	height: 34px;
+    	line-height: 17px;
+    	overflow: hidden;
+	}
+	// 第四列
+	.cart_list_tb .col_3 {
+    	padding-top: 18px;
+    	line-height: 18px;
+    	word-wrap: break-word;
+    	word-break: break-all;
+    	width:105px;
+    	font-size:12px;
+	}
+	.pl20 {
+    	padding-left: 20px;
+	}
+	.tleft {
+    	text-align: left;
+	}
+	.f_gray, .f_gray a {
+    	color: #666;
+	}
+	// 第五列
+	.cart_list_tb .col_4 {
+    	width: 110px;
+   		padding-top: 25px;
+   		font-size:12px;
+	}
+	.mt3 {
+    	margin-top: 3px;
+	}
+	.actvtip2{
+    	background: #333;
+    	height: 15px;
+    	font: 12px/16px '';
+    	padding: 0 5px;
+    	color: #fff;
+    	text-align: center;
+    	position: relative;
+    	display: inline-block;
+    }
+    .actvtip2 i {
+    	border: 3px solid transparent;
+    	border-bottom: 4px solid #333;
+    	bottom: 15px;
+    	height: 0;
+    	width: 0;
+    	font-size: 0;
+    	position: absolute;
+    	left: 50%;
+    	margin-left: -2px;
+    	overflow: hidden;
+    	    display: inline-block;
+	}
+	// 第六列
+	.cart_list_tb .col_5 {
+    	width: 110px;
+    	text-align: center;
+    	padding-top: 23px;
+	}
+	.cart_list_tb .col_5 .goodsSub {
+   		 margin-left: 17px;
+   		 margin: 0;
+    	height: 22px;
+    	width: 22px;
+    	line-height: 20px;
+    	font-size: 16px;
+    	border: 1px solid #ccc;
+    	color: #000;
+    	outline: 0;
+	}
+	.goodsTxt {
+    	margin: 0;
+    	border-left: 0;
+    	border-right: 0;
+    	width: 28px;
+    	height: 22px;
+    	font: 12px/22px Arial, Helvetica, sans-serif;
+    	text-align: center;
+    	border: 1px solid #c6c6c6;
+	}
+	// 第七列
+	.cart_list_tb .col_6 {
+    	width: 108px;
+    	text-align: center;
+    	padding-top: 25px;
+	}
+	.corg, .c_actprc {
+    	color: #333;
+    	font-size: 14px;
+    	font-family: '宋体';
+	}
+	strong, b {
+    	font-weight: bold;
+	}
+	// 第八列
+	.cart_list_tb .col_7 {
+    	width: 118px;
+    	text-align: center;
+    	padding-top: 16px;
+	}
+	.cart_list_tb .col_7 .JsDel {
+    	margin-right: 0;
+    	display:block;
+	}
+	a {
+    	color: #666;
+    	font-size:12px;
+	}
+// 全选移入收藏夹
+	.shpcrt_operations {
+    	overflow: hidden;
+	}
+	.shpcrt_operations li {
+    	float: left;
+    	height: 30px;
+    	padding: 10px 37px 0 0;
+	}
+	.ygChkbox {
+    	overflow: hidden;
+    	position: relative;
+    	font-size:12px;
+    	color: #666;
+	}
+	.shpcrt_operations .ygChkbox .skin {
+    	margin: 6px 2px 0 13px;
+	}
+// 空白部分
+	.shpcrt_opt {
+    	padding-right: 183px;
+    	padding: 10px 125px 0 0;
+	}
+
+// 2.结算部分
+	.cart_gray_box_ft {
+    	height: 54px;
+    	background: #eee;
+   		overflow: hidden;
+   		width: 990px;
+    	margin-left: auto;
+   		margin-right: auto;
+	}
+	.cart_goon_link {
+    	width: 72px;
+    	height: 21px;
+    	display: inline-block;
+    	font-size: 12px;
+    	text-align: center;
+    	background: #333;
+    	color: #fff;
+    	line-height: 21px;
+    	margin-top: 15px;
+    	margin-left: 20px;
+	}
+	.mt15 {
+    	margin-top: 12px;
+	}
+	.clearShopcart {
+    	width: 72px;
+    	height: 21px;
+    	display: inline-block;
+    	font-size: 12px;
+    	text-align: center;
+    	background: #333;
+    	color: #fff;
+    	line-height: 21px;
+    }
+    .ml20 {
+    	margin-left: 20px;
+	}
+	.fr {
+    	float: right;
+	}
+	.f11{
+		font-size: 12px;
+		color:#666;
+	}
+	.f16 {
+    	font-size: 16px;
+    	color:#666;
+	}
+	.f20 {
+    	font-size:18px;
+    	color: #333;
+    	font-family: '宋体';
+	}
+	.cart_b_paybtn {
+    	background: #333;
+    	text-indent: 0;
+    	text-align: center;
+    	color: #fff;
+    	font-size: 14px;
+    	line-height: 54px;
+    	margin-left: 50px;
+    	width: 129px;
+   		height: 54px;
+   		overflow: hidden;
+    	display: inline-block;
+    	vertical-align: middle;
+    }
+// 购物保障
+	.cen {
+    	width: 990px;
+    	margin-left: auto;
+    	margin-right: auto;
+    	margin-top: 15px;
+	}
+	.cart_btinfo {
+    	text-align: right;
+    	line-height: 22px;
+	}
+	.fr{
+		 float:right;
+	}
+	.cart_btinfo p{
+		// margin:0;
+		// padding:0;
+		font-size:12px;
+		// color:#666;
+	}
+	.cart_btinfo .cart_bz{
+		// display:inline-block;
+		// float:right;
+	}
+	.cart_bz .icon_zp {
+    	// background-position: 0 0;
+    	width: 16px;
+
+    	// float:left;
+	}
+	.cart_bz i {
+		width:18px;
+    	height:16px;
+    	 vertical-align:middle;
+    	// display:inline-block;
+    	margin-left:10px;
+    	background:url(../images/7777.png) no-repeat;
+    	font-style:normal;
+	}
+	.cart_bz  .icon_thh {
+   	 	background-position: 0 -18px;
+   	 	// float:left;
+	}
+	.cart_bz  .icon_bcj {
+   		background-position: 0 -38px;
+   		// float:left;
+	}
+// 底部
+	.footer {
+    	border-top: 1px solid #d9d9d9;
+    	padding-top: 10px;
+    	text-align: center;
+    	height: 60px;
+    	margin-top:80px;
+	}
+	.pr10 {
+    	padding-right: 10px;
+    	font-size:12px;
+    	color:#666;
 	}
