--- a/yougoushishang/shopping.scss
+++ b/yougoushishang/shopping.scss
@@ -405,6 +405,75 @@
     	padding: 10px 125px 0 0;
 	}
 
+
+
+    // 加载商品css样式
+    .goods_box {
+        float: left;
+        width: 1050px; }
+
+    .goods_box ul {
+        overflow: hidden; }
+
+    .goods_box ul li {
+        float: left;
+        width: 230px;
+        height: 360px;
+        text-align: center; 
+        margin-top:20px;
+        margin-left: 30px;
+    }
+
+    .goods_box ul li:hover {
+        background: #f8f8f8; }
+
+    .goods_box ul li a {
+        overflow: hidden;
+     }
+
+    .goods_box ul li a img {
+        width: 210px;
+        height:220px;
+        margin-top: 10px;
+        margin-left:10px;
+         }
+
+    .goods_box ul li a h3 {
+        width: 210px;
+        height: 20px;
+        background: #696868;
+        font-size:12px;
+        color: #fff;
+        text-align:left;
+        margin-left:10px;
+    }
+
+    .goods_box ul li:hover a h3 {
+        display: block; }
+
+    .goods_box ul li a p {
+        font: 12px/20px '';
+        color: #000; 
+        text-align:center;
+        margin-top:20px;
+        height:60px;
+    }
+
+    .goods_box ul li span {
+  
+        font: 600 15px '';
+        color: #333333; 
+        
+        
+    }
+
+    .goods_box ul li i {
+        font: 15px '';
+        color: #999;
+        text-decoration: line-through;
+        
+    }  
+
 // 2.结算部分
 	.cart_gray_box_ft {
     	height: 54px;
